--- a/style.css
+++ b/style.css
@@ -520,7 +520,7 @@ hr {
   align-items: center;
   gap: 40px;
   background-color: #f6f6f6;
-  padding-top: 80px;
+  padding: 80px 0px;
 }
 
 .where-title {
